--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|center_vertical"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="55dp"
             android:src="@drawable/baseline_search_24" />
 
         <com.google.android.material.textfield.TextInputEditText
@@ -39,6 +39,7 @@
             android:hint="Search"
             android:inputType="text"
             android:maxLines="1" />
+
     </FrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -74,6 +75,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/baseline_favorite" />
+
+    <ImageView
+        android:id="@+id/btn_night"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|center_vertical"
+        android:layout_marginStart="320dp"
+        android:src="@drawable/baseline_mode_night_24"
+        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
+        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
+        app:layout_constraintStart_toStartOf="@+id/frameLayout"
+        app:layout_constraintTop_toTopOf="@+id/frameLayout" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
